--- a/assemblies/pad-ce/pom.xml
+++ b/assemblies/pad-ce/pom.xml
@@ -9,7 +9,7 @@
     <version>10.1.0.0-SNAPSHOT</version>
   </parent>
   <artifactId>pad-ce</artifactId>
-  <version>10.1.0.0-SNAPSHOT</version>
+  <version>9.6.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Pentaho Aggregation Designer CE</name>
   <scm>
@@ -17,8 +17,8 @@
   </scm>
   <properties>
     <assembly.dir>${project.build.directory}/assembly</assembly.dir>
-    <pentaho-launcher.version>10.1.0.0-SNAPSHOT</pentaho-launcher.version>
-    <oss-licenses.version>10.1.0.0-SNAPSHOT</oss-licenses.version>
+    <pentaho-launcher.version>9.6.0.0-SNAPSHOT</pentaho-launcher.version>
+    <oss-licenses.version>9.6.0.0-SNAPSHOT</oss-licenses.version>
   </properties>
   <dependencies>
     <dependency>
@@ -44,12 +44,13 @@
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-slf4j-impl</artifactId>
+      <version>2.17.1</version>      
       <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-jcl</artifactId>
-      <version>${log4j.version}</version>
+      <version>2.17.1</version>      
     </dependency>
   </dependencies>
 
