--- a/pentaho-aggdesigner-core/pom.xml
+++ b/pentaho-aggdesigner-core/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <groupId>pentaho</groupId>
   <artifactId>pentaho-aggdesigner-core</artifactId>
-  <version>10.1.0.0-SNAPSHOT</version>
+  <version>9.6.0.0-SNAPSHOT</version>
   <name>Pentaho Aggregation Designer Core</name>
   <licenses>
     <license>
@@ -23,6 +23,9 @@
     <developerConnection>scm:git:git@github.com:pentaho/pentaho-aggdesigner.git</developerConnection>
   </scm>
   <properties>
+    <commons-io.version>2.15.1</commons-io.version>
+    <guava.version>33.0.0-jre</guava.version>
+    <commons-logging.version>1.3.0</commons-logging.version>
     <mysql.username>root</mysql.username>
     <mysql-dist.version>5.6.14</mysql-dist.version>
     <mysql-connector-java.version>6.0.6</mysql-connector-java.version>
@@ -32,14 +35,15 @@
     <mysql.setup.url>jdbc:mysql://localhost:${mysql.port}/mysql</mysql.setup.url>
     <maven-source-plugin.version>3.0.0</maven-source-plugin.version>
     <mysql.url.foodmart>jdbc:mysql://localhost:${mysql.port}/Foodmart</mysql.url.foodmart>
-
     <reportTestBase.writeToFile>false</reportTestBase.writeToFile>
     <truezip-maven-plugin.version>1.2</truezip-maven-plugin.version>
     <mysql.url.default>jdbc:mysql://localhost:${mysql.port}/mysql</mysql.url.default>
     <mysql.password>root</mysql.password>
     <sql-maven-plugin.version>1.5</sql-maven-plugin.version>
     <foodmart.schema.name>Foodmart</foodmart.schema.name>
-    <mondrian.version>10.1.0.0-SNAPSHOT</mondrian.version>
+    <mondrian.version>9.6.0.0-SNAPSHOT</mondrian.version>
+    <maven.compiler.source>6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>    
   </properties>
 
   <dependencies>
@@ -52,6 +56,7 @@
     <dependency>
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
+      <version>${commons-logging.version}</version>
     </dependency>
     <dependency>
       <groupId>commons-io</groupId>
@@ -62,11 +67,13 @@
     <dependency>
       <groupId>org.dom4j</groupId>
       <artifactId>dom4j</artifactId>
+      <version>2.1.4</version>      
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>jaxen</groupId>
       <artifactId>jaxen</artifactId>
+      <version>1.1.6</version>      
       <scope>runtime</scope>
     </dependency>
     <dependency>
@@ -127,6 +134,7 @@
     <dependency>
       <groupId>xml-apis</groupId>
       <artifactId>xml-apis</artifactId>
+      <version>1.4.01</version>      
     </dependency>
   </dependencies>
   <profiles>
