--- a/pentaho-aggdesigner-ui/pom.xml
+++ b/pentaho-aggdesigner-ui/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <groupId>pentaho</groupId>
   <artifactId>pentaho-aggdesigner-ui</artifactId>
-  <version>10.1.0.0-SNAPSHOT</version>
+  <version>9.6.0.0-SNAPSHOT</version>
   <name>Pentaho Aggregation Designer UI</name>
   <licenses>
     <license>
@@ -23,15 +23,20 @@
     <developerConnection>scm:git:git@github.com:pentaho/pentaho-aggdesigner.git</developerConnection>
   </scm>
   <properties>
+    <commons-io.version>2.15.1</commons-io.version>
+    <guava.version>33.0.0-jre</guava.version>
+    <commons-logging.version>1.3.0</commons-logging.version>
     <dependency.spring.modules.revision>0.8</dependency.spring.modules.revision>
-    <project.revision>10.1.0.0-SNAPSHOT</project.revision>
-    <mondrian.version>10.1.0.0-SNAPSHOT</mondrian.version>
-    <commons-xul.version>10.1.0.0-SNAPSHOT</commons-xul.version>
-    <mondrian-schemaworkbench-plugins.version>10.1.0.0-SNAPSHOT</mondrian-schemaworkbench-plugins.version>
-    <pentaho-launcher.version>10.1.0.0-SNAPSHOT</pentaho-launcher.version>
+    <project.revision>9.6.0.0-SNAPSHOT</project.revision>
+    <mondrian.version>9.6.0.0-SNAPSHOT</mondrian.version>
+    <commons-xul.version>9.6.0.0-SNAPSHOT</commons-xul.version>
+    <mondrian-schemaworkbench-plugins.version>9.6.0.0-SNAPSHOT</mondrian-schemaworkbench-plugins.version>
+    <pentaho-launcher.version>9.6.0.0-SNAPSHOT</pentaho-launcher.version>
     <dependency.javassist.revision>3.20.0-GA</dependency.javassist.revision>
-    <pdi.version>10.1.0.0-SNAPSHOT</pdi.version>
+    <pdi.version>9.3.0.0-428</pdi.version>
     <mockito-all.version>1.9.5</mockito-all.version>
+    <maven.compiler.source>6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>    
   </properties>
 
   <dependencies>
@@ -44,6 +49,7 @@
     <dependency>
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
+      <version>1.1</version>      
     </dependency>
     <dependency>
       <groupId>commons-io</groupId>
@@ -54,26 +60,31 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
+      <version>5.3.13</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
+      <version>5.3.13</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
+      <version>5.3.13</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-jdbc</artifactId>
+      <version>5.3.13</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-tx</artifactId>
+      <version>5.3.13</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -103,6 +114,7 @@
     <dependency>
       <groupId>com.thoughtworks.xstream</groupId>
       <artifactId>xstream</artifactId>
+      <version>1.4.7</version>      
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -456,6 +468,7 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
+      <version>6.1.3</version>
       <scope>test</scope>
     </dependency>
     <dependency>
