--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,12 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <parent>
+<!--  <parent>
     <groupId>org.pentaho</groupId>
     <artifactId>pentaho-ce-jar-parent-pom</artifactId>
     <version>10.1.0.0-SNAPSHOT</version>
   </parent>
+-->
   <groupId>pentaho</groupId>
   <artifactId>pentaho-aggdesigner-parent-pom</artifactId>
   <version>10.1.0.0-SNAPSHOT</version>
@@ -27,7 +28,6 @@
     <junit.version>4.13.2</junit.version>
     <jmock.version>2.4.0</jmock.version>
   </properties>
-
 
   <repositories>
     <repository>
@@ -58,6 +58,5 @@
       </releases>
     </pluginRepository>
   </pluginRepositories>
-
 
 </project>
